css/app.scss
/* ... */
.btn-github span {
    margin: 0 15px 0 0;
    vertical-align: text-top;
    font-size: 22px;
}

/* Search */
#search_query_query {
  display: inline;
}

.wrapper-search {
  clear: both;
}
.wrapper-search .sortable a {
  border: 0;
}

#search_query_orderBys {
  display: none;
}

.sortable .glyphicon.active {
  color: #2d2d32;
}

.sortable #order-bys-wrapper {
  font-size: 24px;
  position: relative;
  top: 2px;
  margin-left: -12px;
  padding-right: 0;
  white-space: nowrap;
  overflow: hidden;
  height: 30px;
}

.sortable .order-by-group .icon:first-child {
  margin-right: 5px;
}

.sortable #order-bys-wrapper a {
  margin-right: 7px;
  display: inline-block;
}

.sortable #order-bys-wrapper a.clear {
  width: auto;
  margin-right: 0px;
  margin-left: 5px;
}

#search-form .submit-wrapper {
  width: 100px;
  float: right;
  display: none;
}
.no-js #search-form .submit-wrapper {
  display: block;
}
#search-form .submit {
  margin: 0;
  padding: 6px 20px;
  width: 100px;
}
#search-form p {
  margin: 0;
}
.search-list {
  margin-top: 10px;
}


.package h2.title {
    margin-bottom: -1px !important;
    position: relative;
}
.package .force-update-trigger {
    cursor: pointer;
}
.package .force-update-trigger.loading:after {
    content: "";
    background-position: 7px center;
    background-image: url("../web/img/loader-white.gif");
    background-repeat: no-repeat;
    padding-left: 30px;
}
.package .action input.loading, .package .action input.loading:hover, .package .action input.loading:active {
  background-position: 10px center;
  background-image: url("../web/img/loader.gif");
  background-repeat: no-repeat;
  padding-left: 35px;
}
.package .action {
  margin-right: 5px;
  margin-bottom: 15px;
  display: inline-block;
}
.package, .package p {
    font-size: 14px;
}

.package p.description {
    margin-top: 0;
    font-size: 25px;
    font-style: italic;
    font-weight: 300;
    margin-bottom: 15px;
}
@media (max-width: 767px) {
    .package p.description {
        font-size: 20px;
    }
}
.package .details {
    line-height: 200%;
}
.package .details p > i:first-child {
    margin-right: 5px;
}
.package .details p, .package .facts p {
    margin: 0;
}
.package .details .maintainers {
  padding-bottom: 6px;
  font-size: 0.0001px;
}
.package .details .maintainers img {
  margin-bottom: 4px;
  margin-right: 4px;
}
.package .details .maintainer-actions {
    a {
        font-size: 34px;
        cursor: pointer;
    }
}
.package .details .canonical,
.package .details .purl,
.package .funding p {
  text-overflow: ellipsis;
  overflow: hidden;
  width: 100%;
  white-space: nowrap;
}

.package .facts span {
    display: inline-block;
    width: 100px;
}

.package .tags a:before {
  content: "#";
}
.package .tags a {
  margin-right: 10px;
  display: inline-block;
}

.package-header .filters {
    font-size: .5em;
    float: right;
    background: #fafafa;
    padding: 5px 10px;
    border: 1px solid #f28d1a;
    line-height: 24px;
}
.package-header .filters .filter {
    display: block;
}
.package-header .filters .active {
    text-decoration: underline;
}

.btn-github.disabled {
    background: #ecf0f1;
    color: #bdc3c7;
}



.package .readme {
  padding-bottom: 20px;
}
.wrapper .content .package .readme img {
  max-width: 100%;
}
.wrapper .content .package .readme h1:first-child,
.wrapper .content .package .readme p:first-child,
.wrapper .content .package .readme h2:first-child,
.wrapper .content .package .readme h3:first-child {
  margin-top: 0;
}
.wrapper .content .package .readme h1 {
  font-size: 20px;
  font-weight: 300;
  padding: 0;
  margin: 25px 0 10px;
  line-height: 100%;
}
.wrapper .content .package .readme h2 {
  font-size: 16px;
  font-weight: 600;
  padding: 0;
  margin: 25px 0 10px;
  line-height: 100%;
}
.wrapper .content .package .readme h3,
.wrapper .content .package .readme h4,
.wrapper .content .package .readme h5,
.wrapper .content .package .readme h6 {
  font-size: 14px;
  font-weight: 600;
  padding: 0;
  margin: 15px 0 5px;
  line-height: 100%;
}

.wrapper .content .package .readme table {
  margin: 0 0 15px;
}
.wrapper .content .package .readme th,
.wrapper .content .package .readme td {
  border: 1px solid #CCC;
  padding: 5px 10px;
}
.wrapper .content .package .readme th {
  background: #EEE;
}
.wrapper .content .package .readme table code {
  font-size: 13px;
}

.package .package-aside {
  border-top: 1px solid #f28d1a;
  border-radius: 0;

  margin: 10px 0 0;
  padding: 0;

  &:first-child {
      margin-top: 0;
  }
}
.package .package-aside.versions-wrapper {
  margin-left: 15px;
  margin-right: 15px;
}
.package-aside .details {
  padding-left: 0;
}
.package .package-aside i {
  color: #bbbfc4;
}
.package .package-aside i:hover {
  color: #a5aab0;
}
.package .package-aside .facts i, .package .package-aside .facts i:hover {
  color: #2d2d32;
  margin-right: 4px;
}
.package .package-aside a.advisory-alert {
    margin-left: -20px;
}
.package .package-aside a.malware-alert {
    margin-left: -40px;
}
.package .package-aside a.action-alert:hover, .package .package-aside a.action-alert:active {
    text-decoration: none;
}
.package .package-aside a.action-alert i {
    color: #ff4533;
}
.package .package-aside a.action-alert:hover i {
    color: #cd3729;
}

.package .details-toggler.open, .package .details-toggler.open a, .package .details-toggler.open i {
  background: #f28d1a;
  color: #fff;
}

.package .package-aside.versions-wrapper, .package .version-details {
  margin-top: 10px;
}
.package .last-update {
    padding: 15px;
}
.package .last-update p, .package .last-update a {
    font-size: 10px;
}
.package .last-update .auto-update-success {
    color: #69AD21;
}
.package .last-update .auto-update-danger {
    color: #ff002f;
}

.package .version-details .title {
  border-top: 1px solid #f28d1a;
  padding-top: 10px;
}
.package .versions {
  list-style: none;
  line-height: 170%;
  overflow-y: hidden;
  max-height: 300px;
  padding: 0;
  margin: 0;
}
/* ... */

